Fixed issue with navigation being cut off abruptly for certain mobile devices.

--- a/www/styles/app/app.css
+++ b/www/styles/app/app.css
@@ -6,6 +6,11 @@
 /**************************************************
  * Custom Web Page Styles
  **************************************************/
+
+ #nav {
+  overflow: auto;
+ }
+
 .demo.row .showcase-demos {
   margin: 0 auto; 
   width: 80%;
